Chapter2/1.13/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-step7-svc
spec:
  type: ClusterIP
  selector:
    app: project-step7
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3000
